bk_ida/gccida/c0/record_jump_cond
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_jump_cond/src/cse.c:4958:25: error: must use 'enum' tag to refer to type 'rtx_code'
void  record_jump_cond( rtx_code code, machine_mode mode, rtx op0, rtx op1, int reversed_nonequality) 
                        ^
                        enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_jump_cond/src/cse.c:4958:40: error: must use 'enum' tag to refer to type 'machine_mode'
void  record_jump_cond( rtx_code code, machine_mode mode, rtx op0, rtx op1, int reversed_nonequality) 
                                       ^
                                       enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_jump_cond/src/cse.c:4985:4: error: expected ';' after expression
rtx tem_2; // [rsp+F0h] [rbp-80h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_jump_cond/src/cse.c:4985:5: error: use of undeclared identifier 'tem_2'
rtx tem_2; // [rsp+F0h] [rbp-80h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_jump_cond/src/cse.c:4986:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode inner_mode_2; // [rsp+FCh] [rbp-74h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_jump_cond/src/cse.c:4987:4: error: expected ';' after expression
rtx tem_1; // [rsp+100h] [rbp-70h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_jump_cond/src/cse.c:4987:5: error: use of undeclared identifier 'tem_1'
rtx tem_1; // [rsp+100h] [rbp-70h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_jump_cond/src/cse.c:4988:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode inner_mode_1; // [rsp+10Ch] [rbp-64h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_jump_cond/src/cse.c:4989:4: error: expected ';' after expression
rtx tem_0; // [rsp+110h] [rbp-60h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_jump_cond/src/cse.c:4989:5: error: use of undeclared identifier 'tem_0'
rtx tem_0; // [rsp+110h] [rbp-60h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_jump_cond/src/cse.c:4990:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode inner_mode_0; // [rsp+11Ch] [rbp-54h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_jump_cond/src/cse.c:4991:4: error: expected ';' after expression
rtx tem; // [rsp+120h] [rbp-50h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_jump_cond/src/cse.c:4991:5: error: use of undeclared identifier 'tem'; did you mean 'tee'?
rtx tem; // [rsp+120h] [rbp-50h] 
    ^~~
    tee
/usr/include/x86_64-linux-gnu/bits/fcntl-linux.h:416:18: note: 'tee' declared here
extern __ssize_t tee (int __fdin, int __fdout, size_t __len,
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_jump_cond/src/cse.c:4992:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode inner_mode; // [rsp+12Ch] [rbp-44h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_jump_cond/src/cse.c:4999:4: error: expected ';' after expression
rtx op1a; // [rsp+158h] [rbp-18h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_jump_cond/src/cse.c:4999:5: error: use of undeclared identifier 'op1a'; did you mean 'op1'?
rtx op1a; // [rsp+158h] [rbp-18h] 
    ^~~~
    op1
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_jump_cond/src/cse.c:4958:72: note: 'op1' declared here
void  record_jump_cond( rtx_code code, machine_mode mode, rtx op0, rtx op1, int reversed_nonequality) 
                                                                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_jump_cond/src/cse.c:5001:1: error: use of undeclared identifier 'op1a'; did you mean 'op1'?
op1a = op1; 
^~~~
op1
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_jump_cond/src/cse.c:4958:72: note: 'op1' declared here
void  record_jump_cond( rtx_code code, machine_mode mode, rtx op0, rtx op1, int reversed_nonequality) 
                                                                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_jump_cond/src/cse.c:5007:1: error: use of undeclared identifier 'tem'
tem = gen_lowpart_if_possible( inner_mode, op1); 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_jump_cond/src/cse.c:5009:6: error: use of undeclared identifier 'tem'; did you mean 'tee'?
if ( tem ) 
     ^~~
     tee
/usr/include/x86_64-linux-gnu/bits/fcntl-linux.h:416:18: note: 'tee' declared here
extern __ssize_t tee (int __fdin, int __fdout, size_t __len,
                 ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_jump_cond/src/obj/cse.o] Error 1
